--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ compiler:
   - gcc
 
 before_install:
-  - apt-get install libxrandr-dev
+  - sudo apt-get -y install libxrandr-dev
 
 before_script:
   - mkdir build
